--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,15 @@
             // "--feature",
             // "FEATURE.conf"
 
-            "--detector-conf-inline",
-            "--detector-conf",
-            "@--detector-models@/home/user/Face/DETECT.conf@/home/user/Face/FEATURE.conf@"
+            // "--detector-conf-inline",
+            // "--detector-conf",
+            // "@--detector-models@/home/user/Face/DETECT.conf@/home/user/Face/FEATURE.conf@"
+
+            "--download-tmpfile",
+            "--src",
+            "http://192.167.15.99:8084/platform/images/recognize/db1/20221205113935.txt",
+            "--dst",
+            "/tmp/tmp-XXXXXX",
         ],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
