--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,12 @@
 
             // "--test-flag"
 
-            "--test-mongoose"
+            // "--test-mongoose"
+
+            // "--test-vector"
+            // "--mkstemp"
+
+            "--test-string"
         ],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
