--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
         "name": "test/main",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/test/main",
+        "program": "${workspaceFolder}/main",
         "args": [
             // "--path",
             // "/home/user/"
@@ -38,7 +38,11 @@
             // "--test-vector"
             // "--mkstemp"
 
-            "--test-string"
+            // "--test-string"
+
+            "--test-mmap",
+            "--input-file",
+            "/home/user/Pictures/new_year/image-042.jpg"
         ],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
