--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,8 @@
 
             // "--test-flag"
 
-            // "--test-mongoose"
+            // "--test-mongoose-server",
+            "--test-mongoose-client"
 
             // "--test-vector"
             // "--mkstemp"
@@ -44,7 +45,12 @@
             // "--input-file",
             // "/home/user/Pictures/new_year/image-042.jpg"
 
-            "--test-http-server"
+            // "--test-http-server"
+
+            // "--test-pngtojpeg", 
+            // "--png-image",
+            // // "/tmp/gaosong.png",
+            // "//home/user/Face_Images/高耸.png"
         ],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
