--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cmake.configureOnOpen": false,
     "files.associations": {
         "string_view": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
