--- a/Grandhonor/rk_工地盒子/rk_cmd/system-config.json
+++ b/Grandhonor/rk_工地盒子/rk_cmd/system-config.json
@@ -5,12 +5,5 @@
     "reportEventDrawImageWithROI":false,
     "enableAutoDelete":false,
     "modifyFlag":false,
-    "eventSubscribers":[
-        {
-            "name": "dgsad",
-            "address": "http://192.169.4.15",
-            "appKeyId": "bbb",
-            "appKeySecret": "123"
-        }
-    ]
+    "eventSubscribers":null
 }
